Adiciona view cadastro de produtos

--- a/KidsFashion/Views/Shared/_Layout.cshtml
+++ b/KidsFashion/Views/Shared/_Layout.cshtml
@@ -44,8 +44,7 @@
         <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
         <a asp-area="" asp-controller="Categoria" asp-action="Index">Gerenciar Categorias</a>
         <a asp-area="" asp-controller="Fornecedor" asp-action="Index">Gerenciar Fornecedor</a>
-        <a asp-area="" asp-controller="Produto" asp-action="Index">Gerenciar Estoque</a>
-        <a asp-area="" asp-controller="Produto" asp-action="Index">Gerenciar Relatorios</a>
+        <a asp-area="" asp-controller="Produto" asp-action="Index">Gerenciar Produtos</a>
         <!-- Adicione outros itens de menu aqui -->
     </div>
 
