Ajusta layout menu KidsFashion

--- a/KidsFashion/Views/Shared/_Layout.cshtml
+++ b/KidsFashion/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+        <a asp-area="" asp-controller="Home" asp-action="Index">Principal</a>
         <a asp-area="" asp-controller="Categoria" asp-action="Index">Gerenciar Categorias</a>
         <a asp-area="" asp-controller="Fornecedor" asp-action="Index">Gerenciar Fornecedor</a>
         <a asp-area="" asp-controller="Produto" asp-action="Index">Gerenciar Produtos</a>
